@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

'title Domain Model

'class Platform {
'  -description
'}

class Organization {
    name
    vatNumber
    website
    phoneNumber
    email
}

class Job {
    jobName
}

class HumanResourceManager {
    name
    email
    position
    phone
}

'class User {
'    name
'    email
'    password
'}

'Platform "1" -- "*" Organization : has registered >
'Platform "1" -- "*" Category : defines >
Organization "1" - "0..*" HumanResourceManager : has >
Organization "1" - "0..*" Job: owns >
'Task "*" -- "1" HumanResourceManager: created by >
HumanResourceManager "1" -- "*" Job : creates >
'HumanResourceManager "0..1" -- "1" User: acts as >

@enduml